# ChangeLog for media-video/transcode
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/transcode/ChangeLog,v 1.261 2009/10/26 12:51:21 aballier Exp $

  26 Oct 2009; Alexis Ballier <aballier@gentoo.org> transcode-1.1.4.ebuild,
  +files/transcode-1.1.4-x264.patch:
  Add a patch to fix build/runtime with latest x264

  25 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  -transcode-1.1.1-r3.ebuild, -transcode-1.1.1-r4.ebuild,
  -transcode-1.1.2.ebuild, -transcode-1.1.2-r1.ebuild,
  -transcode-1.1.3.ebuild:
  remove old

*transcode-1.1.4 (25 Aug 2009)

  25 Aug 2009; Alexis Ballier <aballier@gentoo.org> +transcode-1.1.4.ebuild:
  version bump, by Lars Wendler (Polynomial-C) <polynomial-c@gentoo.org>,
  bug #282659

*transcode-1.1.3 (04 Aug 2009)

  04 Aug 2009; Alexis Ballier <aballier@gentoo.org> +transcode-1.1.3.ebuild:
  version bump, bug #280046

*transcode-1.1.2-r1 (17 May 2009)

  17 May 2009; Jeff Gardner <je_fro@gentoo.org> +transcode-1.1.2-r1.ebuild:
  Build the deprecated but still useful tcrequant with --enable-deprecated.
  Move sed to src_prepare to squash repoman warning.

*transcode-1.1.2 (14 Apr 2009)

  14 Apr 2009; Alexis Ballier <aballier@gentoo.org> +transcode-1.1.2.ebuild:
  version bump

*transcode-1.1.1-r4 (15 Mar 2009)

  15 Mar 2009; Alexis Ballier <aballier@gentoo.org>
  +transcode-1.1.1-r4.ebuild:
  depend on faac with use aac by gentoobugsie@gmail.com, bug #262565 and
  give --enable-experimental to configure so that the faac module and a
  couple of others are actually built.

  10 Mar 2009; Steve Dibb <beandog@gentoo.org> transcode-1.0.7.ebuild,
  transcode-1.1.1-r3.ebuild:
  Move dvdread use flag to simpler dvd one

  09 Mar 2009; Steve Dibb <beandog@gentoo.org> -transcode-1.0.7_rc1.ebuild,
  -transcode-1.1.1.ebuild, -transcode-1.1.1-r1.ebuild,
  -transcode-1.1.1-r2.ebuild, transcode-1.1.1-r3.ebuild:
  Cleanup ebuild; remove old

*transcode-1.1.1-r3 (08 Mar 2009)
