@@ -5,14 +5,16 @@ AUX transcode-1.0.6-imagemagick.patch 672 RMD160 2d1ab8cf8ca9846c8ca5de24033b358
 AUX transcode-1.1.4-x264.patch 1837 RMD160 6ec8925ca714f688df06f5df229c741ca2076708 SHA1 6f54bbebc996e4576e31f16d22863f23de2ce2d9 SHA256 f1746212a2b2f2bfc01cce0e26c83c2392dbd776878a76e627f7ec809f5da0a9
 DIST transcode-1.0.7.tar.bz2 1942127 RMD160 f302972d8cf784e356753f7c21a012a73246ae71 SHA1 480f1997ae391f29f6493993ec7b1cdbcf8afbc6 SHA256 8015efe2a62edf4280ad156995c540285e9dbc92b540c66f81cc180eb3d2481e
 DIST transcode-1.1.4.tar.bz2 2116804 RMD160 6afd10e67503a6a70ee9826a7e1c49a31c4a4e7e SHA1 3d08f67c047b1b498a4a5183ad164c0641fcbc00 SHA256 7f61fec49ccbf6c5ebe86505c779a659711352733252b241287ce7bf15710e3e
+DIST transcode-1.1.5.tar.bz2 2123207 RMD160 fdc441190110a4ae4a54a4e2abd307db7f0111aa SHA1 48c36e06ca0cd1cdc1a9c6a241e231f896eefd26 SHA256 7e01665079eef81625c4761cc5c08a3b53b97de90fb0728d64f5a86a3bc59009
 EBUILD transcode-1.0.7.ebuild 3914 RMD160 bf65e7cad4492278ce334099699bbb3c2785a210 SHA1 4a0f9477f1bdf833956c5085400ac80c9991c9fe SHA256 d16c8f315fe7dd1b9cf073e7b6e1a2d6cbddc3741b67618c6d0e77cd8c9f14c1
 EBUILD transcode-1.1.4.ebuild 3292 RMD160 ed832c523168698d843a9c05073ce38072f10a11 SHA1 81f0d8d1d6c958b40621aab35cb9d4e3b7e8d7f1 SHA256 69619cdc9cda4cd124d4601f3e8fb874786adfcd43b1006245e3aec91465fcb0
-MISC ChangeLog 44310 RMD160 12febfc690c64a38c42d56320098958617a278fd SHA1 89ba332eb066a895ff25e6acba9d7576e8db173f SHA256 30d74cc0eb0390ebc16efcd26a4363a28d2d7a35e92f952383c5d4f4069daf05
+EBUILD transcode-1.1.5.ebuild 3262 RMD160 6268e2081f7dfed66b86537196925499d6e599e0 SHA1 f9bed40961fccc6cdc5e702cbb98ce27fc694a95 SHA256 f7e53d023bc485ec00b7473755af20d839ae61d33339a2851427dcaa969de45d
+MISC ChangeLog 44508 RMD160 5d9f0789df782407a48ed19709d4739d1d8dafc4 SHA1 0f3f080779fd490003cea7ea95ae6161a5a48292 SHA256 2061d0a764aa9656b2c96ad516f1a1606d93ca2f831c64139475b250b97784a8
 MISC metadata.xml 645 RMD160 73b9c254a56c875542316ae2e672cd822e796083 SHA1 ae717e64c138b5c9692760911e8325fdeb3f7584 SHA256 31d2bc07b4751ed99dd1378a429d7d2cadac64ba89be6c1eda268e2e874dc41c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAkrlm04ACgkQvFcC4BYPU0reyQCfTCFWojkJTk17o/KpB9JuG+bV
-wqcAn0kU3KrmHOXM2G38o3JxmwKb4mkj
-=m2VA
+iEYEARECAAYFAkrvaK4ACgkQvFcC4BYPU0o4cQCgzL2hANYaEiouxKAUmnvKAcub
+2+UAoJSwHamcvGCegdZ1aiex9t03Wr4Q
+=cShO
 -----END PGP SIGNATURE-----
