@@ -1,6 +1,12 @@
 # ChangeLog for media-video/transcode
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/transcode/ChangeLog,v 1.261 2009/10/26 12:51:21 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/transcode/ChangeLog,v 1.262 2009/11/02 23:18:00 aballier Exp $
+
+*transcode-1.1.5 (02 Nov 2009)
+
+  02 Nov 2009; Alexis Ballier <aballier@gentoo.org> +transcode-1.1.5.ebuild:
+  version bump, by Lars Wendler (Polynomial-C) <polynomial-c@gentoo.org>,
+  bug #291607
 
   26 Oct 2009; Alexis Ballier <aballier@gentoo.org> transcode-1.1.4.ebuild,
   +files/transcode-1.1.4-x264.patch:
